[metadata]
name = pymailgen
author = Tullio Facchinetti
author_email = toolleeo@gmail.com
summary = Email generator from CSV metadata and text template file
url = https://github.com/toolleeo/pymailgen
license = GPL-3
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = pymailgen
include_package_data = True

[options.entry_points]
console_scripts =
	pymailgen = pymailgen:main
